--- a/src/optix/content/admin/admin.component.sass
+++ b/src/optix/content/admin/admin.component.sass
@@ -1,17 +1,39 @@
-.button
-	margin: 15px
-	
-.dropdown-wrapper
-	color: black
-	display: inline-block
-	margin: 5px
-	vertical-align: middle
+h3
+	margin-bottom: 15px
 
-.player-dropdown
-	width: 150px
+.admin-action
+	margin-bottom: 20px
 
-.role-dropdown
-	width: 100px
+	.form-row
+		height: 50px
+		margin-bottom: 10px
+		max-width: 500px
 
-.token-wrapper
-	height: 30px
+		.record-input
+			width: 100%
+
+		.text-input
+			margin-top: 6px
+
+	.button
+		margin: 15px
+		
+	.dropdown-wrapper
+		color: black
+		display: inline-block
+		vertical-align: middle
+
+	.player-dropdown
+		width: 150px
+
+	.record-label
+		line-height: 50px
+
+	.role-dropdown
+		width: 100px
+
+	.token-input 
+		margin: 5px
+
+	.token-wrapper
+		height: 30px
