finished add record ui

--- a/src/optix/content/admin/admin.component.sass
+++ b/src/optix/content/admin/admin.component.sass
@@ -3,20 +3,33 @@ h3
 
 .admin-action
 	margin-bottom: 20px
+	
+	.form-control-errors
+		font-size: 18px
+		font-style: italic
+		height: 27px
+		margin-bottom: 20px
+
+		.error-text
+			color:  #ed4337
 
 	.form-row
 		height: 50px
 		margin-bottom: 10px
-		max-width: 500px
+		width: 600px
+
+		.error-dropdown
+			border: 1px solid #f00
+			border-radius: 2px
+
+		.error-input
+			border-color: #f00
 
 		.record-input
 			width: 100%
 
 		.text-input
 			margin-top: 6px
-
-	.button
-		margin: 15px
 		
 	.dropdown-wrapper
 		color: black
@@ -31,6 +44,9 @@ h3
 
 	.role-dropdown
 		width: 100px
+
+	.token-button
+		margin: 15px 0
 
 	.token-input 
 		margin: 5px
