fixed styling issues for mobile

--- a/src/optix/content/admin/admin.component.sass
+++ b/src/optix/content/admin/admin.component.sass
@@ -14,8 +14,9 @@ h3
 			color:  #ed4337
 
 	.form-row
-		height: 50px
+		min-height: 50px
 		margin-bottom: 10px
+		max-width: 100%
 		width: 600px
 
 		.error-dropdown
@@ -52,4 +53,4 @@ h3
 		margin: 5px
 
 	.token-wrapper
-		height: 30px
+		min-height: 30px
